# synthetic-patients

./: .gitignore  Makefile  README.md  requirements.txt
code/: dialog.ipynb  generate_pixel_art.py  pyproject.toml  realtime_video.ipynb  requirements.txt  util.py
conversations/: conversation_2024-02-20-T-12-03-13.txt  conversation_2024-02-20-T-12-05-02.txt  conversation_2024-02-20-T-12-06-38.txt  conversation_2024-02-20-T-12-10-24.txt  conversation_2024-02-20-T-12-18-34.txt  conversation_2024-02-20-T-12-33-36.txt  conversation_2024-02-20-T-12-42-00.txt  conversation_initial.txt
patient-profiles/: alfarsi.md  green.md  kim.md  patel.md  torres.md
