[tool.poetry]
name = "synthetic-patients"
version = "0"
description = "na"
authors = ["Alex Goodell <alexgoodell@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.16"
langchain-openai = "^0.1.4"
load-dotenv = "^0.1.0"
jupyter = "^1.0.0"
tabulate = "^0.9.0"
rich = "^13.7.1"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
